--- a/lk13.html
+++ b/lk13.html
@@ -257,7 +257,7 @@
               <div class="line_param_input">
                 <div class="label_in">
                   <input type="text" class="tinput" required />
-                  <label class="tlabel">Поиск по наименованию и артиклу</label>
+                  <label class="tlabel" style="top: 18px">Поиск по наименованию и артиклу</label>
                 </div>
               </div>
               <div class="f_part" style="padding-bottom: 0;">
