--- a/lk14.html
+++ b/lk14.html
@@ -129,7 +129,7 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <h1>Запросы от вышестоящих</h1>
+          <h1>Запросы вышестоящим</h1>
         </div>
         <div class="line_param_input">
           <div class="l_p" style="margin-bottom: 30px">
