--- a/lk16.html
+++ b/lk16.html
@@ -211,12 +211,18 @@
                   3582.75
                 </div>
               </div>
-              <div class="line_param">
+              <div class="line_param" style="margin-bottom: 0">
                 <div class="line_param_top">
                   Сумма баллов:
                 </div>
                 <div class="line_param_bottom">
                   27.80
+                </div>
+              </div>
+              <div class="line_param">
+                <div class="check_block" style="margin: 0 0 20px 0; padding-top: 6px">
+                  <input type="checkbox" class="line_param_checkbox" id="period" checked/>
+                  <label class="line_param_label" for="period" style="font-weight: bold">Оплатить</label>
                 </div>
               </div>
             </div>
@@ -293,7 +299,12 @@
                     <td>24</td>
                     <td>457</td>
                     <td>128</td>
-                    <td>1</td>
+                    <td>
+                      <div style="margin-top: 11px">
+                        <span style="float: left;">1</span>
+                        <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                      </div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
@@ -301,7 +312,12 @@
                     <td>24</td>
                     <td>457</td>
                     <td>128</td>
-                    <td>1</td>
+                    <td>
+                      <div style="margin-top: 11px">
+                        <span style="float: left;">1</span>
+                        <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                      </div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
@@ -309,7 +325,12 @@
                     <td>24</td>
                     <td>457</td>
                     <td>128</td>
-                    <td>1</td>
+                    <td>
+                      <div style="margin-top: 11px">
+                        <span style="float: left;">1</span>
+                        <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                      </div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
@@ -317,7 +338,12 @@
                     <td>24</td>
                     <td>457</td>
                     <td>128</td>
-                    <td>1</td>
+                    <td>
+                      <div style="margin-top: 11px">
+                        <span style="float: left;">1</span>
+                        <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                      </div>
+                    </td>
                   </tr>
                 </tbody>
               </table>
@@ -348,7 +374,7 @@
               <div class="line_param_input">
                 <div class="label_in">
                   <input type="text" class="tinput" required />
-                  <label class="tlabel">Поиск по наименованию и артиклу</label>
+                  <label class="tlabel" style="top: 18px">Поиск по наименованию и артиклу</label>
                   <span class="search"></span>
                 </div>
               </div>
@@ -356,14 +382,14 @@
                 <div class="middle_part">
                   <table class="otch_p bordered">
                     <thead>
-                    <tr class="head_t">
-                      <th style="width: 35%">Наименование</th>
-                      <th>Артикул</th>
-                      <th>Баллы</th>
-                      <th>Цена</th>
-                      <th>Остаток по складу</th>
-                      <th>Количество</th>
-                    </tr>
+                      <tr class="head_t">
+                        <th style="width: 35%">Наименование</th>
+                        <th>Артикул</th>
+                        <th>Баллы</th>
+                        <th>Цена</th>
+                        <th>Остаток по складу</th>
+                        <th>Количество</th>
+                      </tr>
                     </thead>
                     <tbody>
                     <tr>
