--- a/lk18.html
+++ b/lk18.html
@@ -290,7 +290,7 @@
               <div class="line_param_input">
                 <div class="sortblock">
                   <div class="sortblock_param">
-                    <h3 style="margin: 20px 0 0">Данные склада</h3>
+                    <h3>Данные склада</h3>
                     <h5 style="margin: 25px 0">Владелец склада</h5>
                     <div class="radio">
                       <input class="custom-radio" type="radio" id="param1" name="owner" value="Выбрать из списка партнеров">
