--- a/lk2.html
+++ b/lk2.html
@@ -183,7 +183,7 @@
                                  <td>
                                      <div class="lin_t_top">
                                         <span class="lt1">-</span>
-                                         <span class="lt3"><img src="images/br.svg" alt=""/></span>
+                                         <span class="lt3"><img src="images/mp_icon_white.svg" alt=""/></span>
                                          <span class="lt5">805903</span>
                                      </div>
                                      <div class="lin_t_bot">
