--- a/lk3.html
+++ b/lk3.html
@@ -130,7 +130,7 @@
         </div>
       <div class="content">
         <!-- ШАПКА КОНТЕНТНОЙ ЧАСТИ -->  
-       <div class="c_head">
+       <div class="c_head c_head_adaptive">
         <h1>История показателей партнера по периодам</h1>
        </div>
         <!-- ШАПКА ЗАКРЫТИЕ -->    
@@ -176,7 +176,6 @@
                                  <th>ОО</th>
                                  <th>КО</th>
                                   <th>Не активность</th>
-
                                  <th>Ранг на начало</th>
                                  <th>Расчетный ранг</th>
                                  <th>Ранг на конец</th>
