--- a/lk7.html
+++ b/lk7.html
@@ -134,7 +134,7 @@
         <div class="component component_adaptive">
           <div class="component_head">
             <div class="nav_links" style="margin-top: 0">
-              <a class="brd_green fill w50 create_account" href="#">Создать возврат</a>
+              <a class="brd_green fill w50" href="#">Создать возврат</a>
             </div>
           </div>
           <div class="component_head">
@@ -158,155 +158,167 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th style="width: 9%">
-                      <div>
-                        <span>Номер / Действия</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>Дата</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>Тип продаж</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>№ покупателя</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>Покупатель</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>№ партнера</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>Партнер</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>Оператор</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                    <th>
-                      <div>
-                        <span>Комментарий</span>
-                      </div>
-                      <div class="table_array">
-                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                      </div>
-                    </th>
-                  </tr>
+                    <tr class="head_t">
+                      <th style="width: 11%">
+                        <div>
+                          <span>Номер / Действия</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Дата</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Тип продаж</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>№ покупателя</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Покупатель</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>№ партнера</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Партнер</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Оператор</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Комментарий</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                    </tr>
                   </thead>
                   <tbody>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                    <td>tt - test</td>
-                    <td>tt - test</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                    <td>tt - test</td>
-                    <td>tt - test</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                    <td>tt - test</td>
-                    <td>tt - test</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                    <td>tt - test</td>
-                    <td>tt - test</td>
-                  </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -495,12 +507,12 @@
                 </table>
                 <div class="line_param_input">
                   <div class="label_in">
-                    <input type="text" class="tinput" required />
-                    <label class="tlabel" for>Оставить комментарий</label>
+                    <input type="text" class="tinput" />
+                    <label class="tlabel" style="top: 18px">Оставить комментарий</label>
                   </div>
                 </div>
                 <div class="nav_links">
-                  <a class="brd_green fill" href="#">Вернуть</a>
+                  <a class="brd_green fill" href="#" style="width: 7.5%; float: right; margin-right: 0">Вернуть</a>
                 </div>
               </div>
             </div>
