--- a/lk12.html
+++ b/lk12.html
@@ -224,12 +224,12 @@
                   <tbody>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -243,12 +243,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -262,12 +262,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -281,12 +281,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -300,12 +300,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
