--- a/lk6.html
+++ b/lk6.html
@@ -150,8 +150,8 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                    <tr class="head_t">
-                      <th style="width: 9%">
+                    <tr class="head_t table_returns">
+                      <th style="width: 11%;">
                         <div>
                           <span>Номер / Действия</span>
                         </div>
@@ -238,7 +238,10 @@
                     <tr>
                       <td>
                         <div class="lin_t_top">
-                          <span>R2020-000228</span>
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3">Просмотр</a>
                         </div>
                       </td>
@@ -254,7 +257,10 @@
                     <tr>
                       <td>
                         <div class="lin_t_top">
-                          <span>R2020-000228</span>
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3">Просмотр</a>
                         </div>
                       </td>
@@ -270,7 +276,10 @@
                     <tr>
                       <td>
                         <div class="lin_t_top">
-                          <span>R2020-000228</span>
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3">Просмотр</a>
                         </div>
                       </td>
@@ -286,7 +295,10 @@
                     <tr>
                       <td>
                         <div class="lin_t_top">
-                          <span>R2020-000228</span>
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">R2020-000228</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3">Просмотр</a>
                         </div>
                       </td>
