поправил еще дефекты

--- a/lk14.html
+++ b/lk14.html
@@ -145,7 +145,7 @@
                 <table class="otch_p bordered">
                   <thead>
                     <tr class="head_t">
-                      <th>
+                      <th style="width: 15%">
                         <div>
                           <span>№ заявки П/П</span>
                         </div>
@@ -231,12 +231,12 @@
                   <tbody>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -250,12 +250,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -269,12 +269,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -288,12 +288,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
@@ -307,12 +307,12 @@
                     </tr>
                     <tr>
                       <td>
-                        <div>
-                          <div style="float: right; margin-top: 11px">
-                            <span>22333</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
                         </div>
                       </td>
                       <td>02.10.2020 03:53:26</td>
