--- a/lk7.html
+++ b/lk7.html
@@ -134,7 +134,7 @@
         <div class="component component_adaptive">
           <div class="component_head">
             <div class="nav_links" style="margin-top: 0">
-              <a class="brd_green fill w50" href="#">Создать возврат</a>
+              <a class="brd_green fill w50" href="#" style="width: auto">Создать возврат</a>
             </div>
           </div>
           <div class="component_head">
@@ -158,7 +158,7 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                    <tr class="head_t">
+                    <tr class="head_t table_returns">
                       <th style="width: 11%">
                         <div>
                           <span>Номер / Действия</span>
@@ -454,7 +454,7 @@
         </div>
       </div>
       <div class="footer">
-        <div class="modal_line" style="display: none">
+        <div class="modal_line modal_line_nakl" style="display: none">
           <a href="#" class="closebig"></a>
           <h3>Накладная № 2020-000255</h3>
           <div class="component_body">
@@ -505,16 +505,18 @@
                     </tr>
                   </tbody>
                 </table>
-                <div class="line_param_input">
-                  <div class="label_in">
-                    <input type="text" class="tinput" />
-                    <label class="tlabel" style="top: 18px">Оставить комментарий</label>
-                  </div>
-                </div>
-                <div class="nav_links">
-                  <a class="brd_green fill" href="#" style="width: 7.5%; float: right; margin-right: 0">Вернуть</a>
-                </div>
               </div>
+            </div>
+          </div>
+          <div class="component_body">
+            <div class="line_param_input">
+              <div class="label_in">
+                <input type="text" class="tinput" />
+                <label class="tlabel" style="top: 18px">Оставить комментарий</label>
+              </div>
+            </div>
+            <div class="nav_links">
+              <a class="brd_green fill button_adaptive" href="#" style="float: right; margin-right: 0">Вернуть</a>
             </div>
           </div>
         </div>
