--- a/lk9.html
+++ b/lk9.html
@@ -147,7 +147,7 @@
                 <span class="calendar"></span>
               </div>
             </div>
-            <div class="component_tags component_tags_adaptive">
+            <div class="component_tags component_tags_adaptive" style="margin-top: 15px">
               <div class="tags">Гель-бад<span class="closes"></span></div>
             </div>
           </div>
