--- a/lk1.html
+++ b/lk1.html
@@ -248,8 +248,6 @@
                         <div class="line_param_bottom">
                           9/3/5
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -258,8 +256,6 @@
                         <div class="line_param_bottom">
                           235
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -268,8 +264,6 @@
                         <div class="line_param_bottom">
                           569
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -278,8 +272,6 @@
                         <div class="line_param_bottom">
                           231
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -288,8 +280,6 @@
                         <div class="line_param_bottom">
                           Наименование
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -298,8 +288,6 @@
                         <div class="line_param_bottom">
                           Наименование
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -308,8 +296,6 @@
                         <div class="line_param_bottom">
                           12.08.2019
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -318,8 +304,6 @@
                         <div class="line_param_bottom">
                           30.11.2022
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                     </div>
                     <div class="r_p">
@@ -330,8 +314,6 @@
                         <div class="line_param_bottom">
                           500
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -340,8 +322,6 @@
                         <div class="line_param_bottom">
                           456
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -350,8 +330,6 @@
                         <div class="line_param_bottom">
                           4522
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -360,8 +338,6 @@
                         <div class="line_param_bottom">
                           764
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -370,8 +346,6 @@
                         <div class="line_param_bottom">
                           Наименование
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -380,8 +354,6 @@
                         <div class="line_param_bottom">
                           Наименование
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                       <div class="line_param">
                         <div class="line_param_top">
@@ -390,8 +362,6 @@
                         <div class="line_param_bottom">
                           25.09.2018
                         </div>
-                        <a href="#" class="line_param_clear"></a>
-                        <div class="line_param_border"></div>
                       </div>
                     </div>
                   </div>
@@ -401,14 +371,8 @@
                   <div class="line_param_input">
                     <div class="l_p">
                       <div class="nav_links">
-                        <a class="brd_green fill w50" href="#">Стать партнером</a>
-                        <a class="brd_green w50 last" href="#">Терминировать</a>
+                        <a class="without_adaptive brd_green fill w50" href="#" style="float: left">Трансферт</a>
                         <a class="brd_green fill w50 for_adaptive" href="#" style="float: right">Трансферт</a>
-                      </div>
-                    </div>
-                    <div class="r_p">
-                      <div class="nav_links">
-                        <a class="without_adaptive brd_green fill w50" href="#" style="float: right">Трансферт</a>
                       </div>
                     </div>
                   </div>
