--- a/lk15.html
+++ b/lk15.html
@@ -173,7 +173,7 @@
                 <div style="overflow-x: scroll">
                   <table class="otch_p bordered">
                     <thead>
-                    <tr class="head_t">
+                      <tr class="head_t table_returns">
                       <th>
                         <div>
                           <span>Номер</span>
@@ -288,11 +288,11 @@
                     <tr style="background-color: #E6F4F4;">
                       <td>
                         <div class="lin_t_top">
-                          <div style="float: right; margin-top: 11px">
-                            <span>2020-000255</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3 open_view modal_view_adaptive">Просмотр</a>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -310,11 +310,11 @@
                     <tr style="background-color: rgba(237, 26, 46, 0.16);">
                       <td>
                         <div class="lin_t_top">
-                          <div style="float: right; margin-top: 11px">
-                            <span>2020-000255</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -332,11 +332,11 @@
                     <tr style="background-color: #CEEBEA;">
                       <td>
                         <div class="lin_t_top">
-                          <div style="float: right; margin-top: 11px">
-                            <span>2020-000255</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
@@ -354,11 +354,11 @@
                     <tr>
                       <td>
                         <div class="lin_t_top">
-                          <div style="float: right; margin-top: 11px">
-                            <span>2020-000255</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 create_account">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
