--- a/lk16.html
+++ b/lk16.html
@@ -373,61 +373,59 @@
             <div class="component_body">
               <div class="line_param_input">
                 <div class="label_in">
-                  <input type="text" class="tinput" required />
+                  <input type="text" class="tinput" />
                   <label class="tlabel" style="top: 18px">Поиск по наименованию и артиклу</label>
                   <span class="search"></span>
                 </div>
               </div>
               <div class="f_part" style="padding-bottom: 0;">
                 <div class="middle_part">
-                  <div style="overflow-x: scroll">
-                    <table class="otch_p bordered">
-                      <thead>
-                      <tr class="head_t">
-                        <th style="width: 35%">Наименование</th>
-                        <th>Артикул</th>
-                        <th>Баллы</th>
-                        <th>Цена</th>
-                        <th>Остаток по складу</th>
-                        <th>Количество</th>
-                      </tr>
-                      </thead>
-                      <tbody>
-                      <tr>
-                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                        <td>115</td>
-                        <td>24</td>
-                        <td>457</td>
-                        <td>128</td>
-                        <td>1</td>
-                      </tr>
-                      <tr>
-                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                        <td>115</td>
-                        <td>24</td>
-                        <td>457</td>
-                        <td>128</td>
-                        <td>1</td>
-                      </tr>
-                      <tr>
-                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                        <td>115</td>
-                        <td>24</td>
-                        <td>457</td>
-                        <td>128</td>
-                        <td>1</td>
-                      </tr>
-                      <tr>
-                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
-                        <td>115</td>
-                        <td>24</td>
-                        <td>457</td>
-                        <td>128</td>
-                        <td>1</td>
-                      </tr>
-                      </tbody>
-                    </table>
-                  </div>
+                  <table class="otch_p bordered">
+                    <thead>
+                    <tr class="head_t">
+                      <th style="width: 35%">Наименование</th>
+                      <th>Артикул</th>
+                      <th>Баллы</th>
+                      <th>Цена</th>
+                      <th>Остаток по складу</th>
+                      <th>Количество</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
