--- a/lk18.html
+++ b/lk18.html
@@ -310,46 +310,44 @@
                     <label class="tlabel">Партнер</label>
                     <a href="#" class="line_param_down"></a>
                   </div>
+                  <div class="label_in block_nopadding">
+                    <input type="text" class="tinput"/>
+                    <label class="tlabel_adaptive tlabel">Город</label>
+                  </div>
+                  <div class="label_in block_nopadding">
+                    <input type="text" class="tinput"/>
+                    <label class="tlabel_adaptive tlabel">Адрес склада</label>
+                  </div>
+                  <div class="label_in block_nopadding">
+                    <input type="text" class="tinput"/>
+                    <label class="tlabel_adaptive tlabel">Телефон</label>
+                  </div>
                 </div>
                 <div class="r_p block_nopadding">
                   <div class="label_in">
                     <input type="text" class="tinput" />
                     <label class="tlabel">Контактное лицо</label>
                   </div>
-                </div>
-                <div class="block_three_column">
-                  <div class="label_in_three_column">
-                    <input type="text" class="tinput"/>
-                    <label class="tlabel_adaptive tlabel">Город</label>
-                  </div>
-                  <div class="label_in_three_column">
+                  <div class="label_in">
                     <input type="text" class="tinput"/>
                     <label class="tlabel_adaptive tlabel">Наименование склада</label>
                   </div>
-                  <div class="label_in_three_column">
-                    <input type="text" class="tinput"/>
-                    <label class="tlabel_adaptive tlabel">Адрес склада</label>
-                  </div>
-                </div>
-                <div class="block_three_column">
-                  <div class="label_in_three_column">
+                  <div class="label_in">
                     <input type="text" class="tinput"/>
                     <label class="tlabel_adaptive tlabel">E-mail</label>
                   </div>
-                  <div class="label_in_three_column">
-                    <input type="text" class="tinput"/>
-                    <label class="tlabel_adaptive tlabel">Телефон</label>
-                  </div>
-                  <div class="label_in_three_column">
+                  <div class="label_in">
                     <input type="text" class="tinput"/>
                     <label class="tlabel_adaptive tlabel">Наценка/скидка</label>
                   </div>
                 </div>
               </div>
               <div class="line_param_input">
-                <div class="label_in block_nopadding" style="padding-right: 5%">
-                  <input type="text" class="tinput" />
-                  <label class="tlabel_adaptive tlabel">Доп контакты</label>
+                <div class="l_p block_nopadding" style="width: 100%">
+                  <div class="label_in block_nopadding">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel_adaptive tlabel">Доп контакты</label>
+                  </div>
                 </div>
               </div>
             </div>
